kubernetes/apps/xavifortes-web/namespace.yaml
---
# kubernetes/apps/xavifortes-web/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: xavifortes
  labels:
    app.kubernetes.io/managed-by: argocd
